# AzureSDKForRust

./: Cargo.toml  README.md
azure_sdk_auth_aad/: Cargo.toml
azure_sdk_auth_aad/src/: errors.rs  lib.rs  login_response.rs
azure_sdk_core/: Cargo.toml
azure_sdk_core/src/: enumerations.rs  errors.rs  lease.rs  lib.rs  parsing.rs  stored_access_policy.rs
src/: errors.rs  lib.rs  login_response.rs
