[package]
name = "azure_sdk_auth_aad"
version = "0.44.0"
description = "Rust wrappers around Microsoft Azure REST APIs - Azure OAuth2 helper crate"
readme = "README.md"
authors = ["Francesco Cogno <francesco.cogno@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/MindFlavor/AzureSDKForRust"
documentation = "http://mindflavor.github.io/AzureSDKForRust/azure_sdk_for_rust/index.html"
homepage = "https://github.com/MindFlavor/AzureSDKForRust"
keywords = ["sdk", "azure", "rest", "iot", "cloud"]
categories = ["api-bindings"]
edition = "2021"

[dependencies]
oauth2 = "5.0.0-alpha.4"
url = "2.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
quick-error = "2"
