[package]
name          = "azure_sdk_core"
version       = "0.44.0"
description   = "Rust wrappers around Microsoft Azure REST APIs - Core crate"
readme        = "README.md"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>", "Max Gortman <mgortman@microsoft.com>", "Dong Liu <doliu@microsoft.com>"]
license       = "Apache-2.0"
repository    = "https://github.com/MindFlavor/AzureSDKForRust"
documentation = "http://mindflavor.github.io/AzureSDKForRust/azure_sdk_for_rust/index.html"
homepage      = "https://github.com/MindFlavor/AzureSDKForRust"
keywords      = ["sdk", "azure", "rest", "iot", "cloud"]
categories    = ["api-bindings"]
edition       = "2021"

[dependencies]
RustyXML                = "0.3"
base64                  = "0.13"
chrono                  = "0.4"
http                    = "0.2"
hyper                   = "0.14"
log                     = "0.4"
quick-error             = "2"
serde                   = { version = "1.0", features = [ "derive" ] }
serde_json              = "1.0"
serde-xml-rs            = "0.5"
url                     = "2.1"
uuid                    = { version = "1", features = ["v4"] }
bytes                   = "1"
hyper-rustls            = { version = "0.23", default-features = false, features = [ "webpki-tokio", "http2" ] }
thiserror               = "1.0"
